<resources>
    <string name="app_name">storyApp</string>
    <string name="signup">SignUp</string>
    <string name="login">login</string>
    <string name="message_welcome_page">This App provides a space for developers, both in Indonesia and worldwide, to connect and share their experiences.</string>
    <string name="title_welcome_page">Welcome to LifeStory!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login first, yes</string>
    <string name="title_login_page">Are you ready to share your story?</string>
    <string name="name">Name</string>
    <string name="logout">Exit</string>
    <string name="language">language</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="camera_x">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload">Post</string>
    <string name="atau">OR</string>
    <string name="masukan_sandi">Enter your Password</string>
    <string name="masukan_email">Enter your Email</string>
    <string name="gambar">image</string>
    <string name="enter_username">Enter Username</string>
    <string name="example_gmail_com">Example@gmail.com</string>
    <string name="enter_password">Enter Password</string>
    <string name="error_name">Name cannot be empty</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">map</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">retry</string>
    <string name="start_point">Start Point</string>
    <string name="lokasi">Location</string>
    <string name="txtAccount">Dont Have an Account Yet?</string>
    <string name="haveAccount">Already have an account?</string>
</resources>